# qencode

./: LICENSE  README.md  pyproject.toml  ruff.toml
doc/: coding_task_use_case.md
samples/: data_3d.json  data_4d.json
src/qencode/: __init__.py  main.py
src/qencode/encodings/: __init__.py  binary.py  one_hot.py  standard.py
src/qencode/io/: __init__.py  serialization.py
src/qencode/tsp/: cost_function.py
tests/: __init__.py  test_binary_cost_function.py  test_one_hot_cost_function.py  test_standard_cost_function.py
